--- a/notebooks/quickstart/full_flow.ipynb
+++ b/notebooks/quickstart/full_flow.ipynb
@@ -1,403 +1,376 @@
 {
-   "cells": [
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "0",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "from syft_rds.orchestra import setup_rds_stack\n",
-            "from syft_rds import RDS_NOTEBOOKS_PATH"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "1",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "from syft_core.url import SyftBoxURL"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "2",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "SyftBoxURL"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "3",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "from pathlib import Path\n",
-            "\n",
-            "\n",
-            "root_dir = Path(\"/Users/azizwork/Workspace/rds/notebooks/quickstart/data/smh\")\n",
-            "try:\n",
-            "    root_dir.rmdir()\n",
-            "except Exception:\n",
-            "    pass\n",
-            "root_dir.mkdir(parents=True, exist_ok=True)\n",
-            "stack = setup_rds_stack(log_level=\"INFO\", root_dir=root_dir)"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "4",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "do_client = stack.do_rds_client\n",
-            "ds_client = stack.ds_rds_client"
-         ]
-      },
-      {
-         "cell_type": "markdown",
-         "id": "5",
-         "metadata": {
-            "metadata": {}
-         },
-         "source": [
-            "# Create a dataset as DO"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "6",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "7",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "private_dir = CWD / \"data\" / \"dataset-1\" / \"private\"\n",
-            "mock_dir = CWD / \"data\" / \"dataset-1\" / \"mock\"\n",
-            "markdown_path = CWD / \"data\" / \"dataset-1\" / \"description.md\"\n",
-            "\n",
-            "private_dir.mkdir(parents=True, exist_ok=True)\n",
-            "mock_dir.mkdir(parents=True, exist_ok=True)\n",
-            "\n",
-            "\n",
-            "with open(private_dir / \"data.csv\", \"w\") as f:\n",
-            "    f.write(\"-1,-2,-3\")\n",
-            "\n",
-            "with open(mock_dir / \"data.csv\", \"w\") as f:\n",
-            "    f.write(\"1,2,3\")\n",
-            "\n",
-            "with open(markdown_path, \"w\") as f:\n",
-            "    f.write(\"some description\")"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "8",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "data = do_client.dataset.create(\n",
-            "    name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-            "    path=private_dir,  # MUST EXIST\n",
-            "    mock_path=mock_dir,\n",
-            "    summary=\"dummy data\",\n",
-            "    description_path=markdown_path,\n",
-            ")"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "9",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "do_client.datasets"
-         ]
-      },
-      {
-         "cell_type": "markdown",
-         "id": "10",
-         "metadata": {
-            "metadata": {}
-         },
-         "source": [
-            "# Use dataset as DS"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "11",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "ds_client.datasets"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "12",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "ds_client.dataset.get(name=\"dataset-1\").get_mock_path()"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "13",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "ds_client.dataset.get(name=\"dataset-1\").get_private_path()"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "14",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "dataset = ds_client.dataset.get(name=\"dataset-1\")\n",
-            "dataset.describe()"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "15",
-         "metadata": {},
-         "outputs": [],
-         "source": [
-            "my_file = CWD / \"data\" / \"code1.py\""
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "16",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "%%writefile {my_file}\n",
-            "\n",
-            "import os\n",
-            "\n",
-            "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
-            "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]\n",
-            "\n",
-            "print(\"Hello, world!\")\n",
-            "\n",
-            "with open(os.path.join(OUTPUT_DIR, \"output.txt\"), \"w\") as f:\n",
-            "    f.write(\"ABC\")\n"
-         ]
-      },
-      {
-         "cell_type": "markdown",
-         "id": "17",
-         "metadata": {},
-         "source": [
-            "# Submit a job to create UserCode and a Job"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "18",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "job = ds_client.jobs.submit(user_code_path=my_file, dataset_name=dataset.name)\n",
-            "job.describe()"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "19",
-         "metadata": {},
-         "outputs": [],
-         "source": [
-            "# Code file is moved to a location inside syftbox\n",
-            "\n",
-            "code = job.user_code\n",
-            "assert code.local_file.exists()\n",
-            "\n",
-            "# Same as: job.code.describe()\n",
-            "job.show_user_code()"
-         ]
-      },
-      {
-         "cell_type": "markdown",
-         "id": "20",
-         "metadata": {},
-         "source": [
-            "# DO reviews"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "21",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
-            "jobs"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "22",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "job = jobs[-1]\n",
-            "\n",
-            "# same as job.code.describe()\n",
-            "job.show_user_code()"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "23",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "res_job = do_client.run_private(job)"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "24",
-         "metadata": {
-            "metadata": {}
-         },
-         "outputs": [],
-         "source": [
-            "do_client.jobs.share_results(res_job);"
-         ]
-      },
-      {
-         "cell_type": "markdown",
-         "id": "25",
-         "metadata": {},
-         "source": [
-            "# DS views the results"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "26",
-         "metadata": {},
-         "outputs": [],
-         "source": [
-            "job = ds_client.jobs.get_all()[-1]"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "27",
-         "metadata": {},
-         "outputs": [],
-         "source": [
-            "# DS can see files in the output path\n",
-            "job.describe()"
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "id": "28",
-         "metadata": {},
-         "outputs": [],
-         "source": [
-            "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
-            "assert len(output_files)"
-         ]
-      }
-   ],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0",
    "metadata": {
-      "kernelspec": {
-         "display_name": "Python 3 (ipykernel)",
-         "language": "python",
-         "name": "python3"
-      },
-      "language_info": {
-         "codemirror_mode": {
-            "name": "ipython",
-            "version": 3
-         },
-         "file_extension": ".py",
-         "mimetype": "text/x-python",
-         "name": "python",
-         "nbconvert_exporter": "python",
-         "pygments_lexer": "ipython3",
-         "version": "3.12.8"
-      }
+    "metadata": {}
    },
-   "nbformat": 4,
-   "nbformat_minor": 5
+   "outputs": [],
+   "source": [
+    "from syft_rds.orchestra import setup_rds_stack\n",
+    "from syft_rds import RDS_NOTEBOOKS_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_core.url import SyftBoxURL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SyftBoxURL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "stack = setup_rds_stack(log_level=\"INFO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "do_client = stack.do_rds_client\n",
+    "ds_client = stack.ds_rds_client"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {
+    "metadata": {}
+   },
+   "source": [
+    "# Create a dataset as DO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CWD = RDS_NOTEBOOKS_PATH / \"quickstart\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "private_dir = CWD / \"data\" / \"dataset-1\" / \"private\"\n",
+    "mock_dir = CWD / \"data\" / \"dataset-1\" / \"mock\"\n",
+    "markdown_path = CWD / \"data\" / \"dataset-1\" / \"description.md\"\n",
+    "\n",
+    "private_dir.mkdir(parents=True, exist_ok=True)\n",
+    "mock_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "with open(private_dir / \"data.csv\", \"w\") as f:\n",
+    "    f.write(\"-1,-2,-3\")\n",
+    "\n",
+    "with open(mock_dir / \"data.csv\", \"w\") as f:\n",
+    "    f.write(\"1,2,3\")\n",
+    "\n",
+    "with open(markdown_path, \"w\") as f:\n",
+    "    f.write(\"some description\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "data = do_client.dataset.create(\n",
+    "    name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
+    "    path=private_dir,  # MUST EXIST\n",
+    "    mock_path=mock_dir,\n",
+    "    summary=\"dummy data\",\n",
+    "    description_path=markdown_path,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "do_client.datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {
+    "metadata": {}
+   },
+   "source": [
+    "# Use dataset as DS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "ds_client.datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "ds_client.dataset.get(name=\"dataset-1\").get_mock_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_client.dataset.get(name=\"dataset-1\").get_private_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "dataset = ds_client.dataset.get(name=\"dataset-1\")\n",
+    "dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_file = CWD / \"data\" / \"code1.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile {my_file}\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]\n",
+    "\n",
+    "print(\"Hello, world!\")\n",
+    "\n",
+    "with open(os.path.join(OUTPUT_DIR, \"output.txt\"), \"w\") as f:\n",
+    "    f.write(\"ABC\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "# Submit a job to create UserCode and a Job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "job = ds_client.jobs.submit(user_code_path=my_file, dataset_name=dataset.name)\n",
+    "job.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code file is moved to a location inside syftbox\n",
+    "\n",
+    "code = job.user_code\n",
+    "assert code.local_file.exists()\n",
+    "\n",
+    "# Same as: job.code.describe()\n",
+    "job.show_user_code()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "# DO reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = jobs[-1]\n",
+    "\n",
+    "# same as job.code.describe()\n",
+    "job.show_user_code()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_job = do_client.run_private(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client.jobs.share_results(res_job);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "# DS views the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = ds_client.jobs.get_all()[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DS can see files in the output path\n",
+    "job.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_files = [f for f in job.output_path.glob(\"**/*\") if f.is_file()]\n",
+    "assert len(output_files)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
