--- a/packages/syft-runtimes/notebooks/high-low/high_low.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low.ipynb
@@ -7,24 +7,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_runtimes.high_low.setup import (\n",
-    "    initialize_high_datasite,\n",
-    "    initialize_sync_config,\n",
-    "    high_side_connect,\n",
-    "    sync,\n",
-    "    prepare_dataset_for_low_side,\n",
-    "    prepare_datasets_from_high_side,\n",
-    ")\n",
-    "\n",
-    "from syft_runtimes.high_low.rsync import Side"
+    "import syft_runtimes.high_low as syhl\n",
+    "from syft_runtimes.high_low.rsync import RsyncConfig, Side\n",
+    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Initializing the high datasite"
+    "remove_rds_stack_dir(key=\"low_datasites\", root_dir=\"./\")"
    ]
   },
   {
@@ -34,11 +29,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "DO = \"do1@openmined.org\"\n",
+    "do_stack_1 = setup_rds_server(email=DO, key=\"low_datasites\", root_dir=\"./\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lowside_syftbox_dir = do_stack_1.client.workspace.data_dir\n",
+    "highside_data_dir = lowside_syftbox_dir.parent / \"high_datasites\"\n",
+    "lowside_email = DO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf {highside_data_dir}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "## Initializing the high datasite and connect to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Low side settings\n",
     "\n",
     "# NOTE: This needs to point to an existing syftbox directory. If it does not exist, create one first: https://www.syftbox.net/\n",
-    "lowside_syftbox_dir = \"~/.syftbox/clients/alice@openmined.org/SyftBox\"\n",
-    "lowside_email = \"alice@openmined.org\"\n",
+    "print(f\"{lowside_syftbox_dir = }\")\n",
+    "print(f\"{highside_data_dir = }\")\n",
     "\n",
     "# Only required if you want to connect to the low side via SSH (for syncing from high to low)\n",
     "# ssh_config: dict = {\n",
@@ -55,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,18 +105,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# First, initialize the high datasite\n",
-    "initialize_high_datasite(email=highside_email, force_overwrite=True)\n",
-    "high_syftbox_client = high_side_connect(email=highside_email)"
+    "syhl.initialize_high_datasite(\n",
+    "    email=highside_email,\n",
+    "    force_overwrite=True,\n",
+    "    data_dir=highside_data_dir,\n",
+    ")\n",
+    "high_syftbox_client = syhl.high_side_connect(\n",
+    "    email=highside_email, data_dir=highside_data_dir\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "9",
    "metadata": {},
    "source": [
     "# Initial sync"
@@ -89,11 +131,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sync_config = initialize_sync_config(\n",
+    "sync_config: RsyncConfig = syhl.initialize_sync_config(\n",
     "    syftbox_client=high_syftbox_client,\n",
     "    lowside_syftbox_dir=lowside_syftbox_dir,\n",
     "    highside_identifier=highside_identifier,\n",
@@ -105,17 +147,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO - ensure the sync folders exist on the lowside (over ssh?)\n",
-    "\n",
-    "\n",
+    "sync_config.model_dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO - ensure the sync folders exist on the lowside (to be done in the folder-based runtimes) (over ssh?)\n",
     "lowside_sync_folders = [\n",
     "    sync_config.jobs_dir(Side.LOW),\n",
     "    sync_config.outputs_dir(Side.LOW),\n",
-    "    sync_config.datasets_dir(Side.LOW),\n",
+    "    sync_config.public_dataset_dirs(Side.LOW),\n",
     "]\n",
     "\n",
     "for folder in lowside_sync_folders:\n",
@@ -125,16 +175,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sync(syftbox_client=high_syftbox_client)"
+    "lowside_sync_folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from syft_runtimes.high_low.setup import get_sync_commands\n",
+    "# commands = syhl.get_sync_commands(syftbox_client=high_syftbox_client, verbose=True)\n",
+    "# commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syhl.sync(syftbox_client=high_syftbox_client)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "16",
    "metadata": {},
    "source": [
     "# Create a high-side dataset"
@@ -143,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +292,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
     "highside_dataset = syd.create(\n",
-    "    name=\"highside_example_dataset\",\n",
+    "    name=\"highside_dataset_1\",\n",
     "    mock_path=data_dir / \"mock_data.csv\",\n",
     "    private_path=data_dir / \"private_data.csv\",\n",
     "    readme_path=readme_path,\n",
@@ -238,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,18 +320,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy the mock part of the dataset to the sync folder\n",
-    "prepare_dataset_for_low_side(highside_dataset, syftbox_client=high_syftbox_client)"
+    "highside_dataset.private_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy the mock part of the dataset to the sync folder\n",
+    "syhl.prepare_dataset_for_low_side(highside_dataset, syftbox_client=high_syftbox_client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,24 +349,23 @@
     "from syft_runtimes.high_low.rsync import Side, SyncDirection\n",
     "\n",
     "# Now we can see the dataset is in our sync folder\n",
-    "show_dir(sync_config.base_sync_dir(Side.HIGH))"
+    "show_dir(sync_config.high_low_runtime_dir(Side.HIGH))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now we can sync from high to low\n",
-    "\n",
-    "sync(syftbox_client=high_syftbox_client, direction=SyncDirection.LOCAL_TO_REMOTE)"
+    "syhl.sync(syftbox_client=high_syftbox_client, direction=SyncDirection.LOCAL_TO_REMOTE)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "27",
    "metadata": {},
    "source": [
     "# Switch to low-side"
@@ -293,27 +374,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_core import Client as SyftBoxClient\n",
-    "\n",
-    "lowside_syftbox_client = SyftBoxClient.load(\n",
-    "    filepath=\"~/.syftbox/clients/alice@openmined.org/config.json\"\n",
-    ")"
+    "do_stack_1.client.config_path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_core import Client as SyftBoxClient\n",
+    "\n",
+    "filepath = do_stack_1.client.config_path\n",
+    "\n",
+    "lowside_syftbox_client = SyftBoxClient.load(filepath=filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
     "# On the low side, we can now publish the synced dataset to our datasite\n",
-    "\n",
-    "prepare_datasets_from_high_side(\n",
+    "syhl.prepare_datasets_from_high_side(\n",
     "    high_side_name=highside_identifier,\n",
     "    syftbox_client=lowside_syftbox_client,\n",
     "    overwrite=True,  # Set to True to overwrite existing datasets on the low side\n",
@@ -323,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,11 +428,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = lowside_dataset_manager.get(name=\"highside_example_dataset\")\n",
+    "dataset = lowside_dataset_manager.get(name=\"highside_dataset_1\")\n",
     "\n",
     "dataset.describe()"
    ]
@@ -350,11 +440,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sanity check: the private data is not available on the low side\n",
+    "# Sanity check: the private data is not available on the low side (should raise FileNotFoundError)\n",
     "# TODO improve error reporting for this case\n",
     "\n",
     "dataset.private_dir"
@@ -362,21 +452,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "34",
    "metadata": {},
    "source": [
-    "# NEXT STEPS:\n",
-    "\n",
-    "- Rewrite syft-runtimes to the folder-based job runner (see https://docs.google.com/document/d/1ORYC-Z55t07dcu45mn2AL1RiMGWOlCD2mYb8kKUk0SY/edit?tab=t.0)\n",
-    "\n",
-    "High side:\n",
-    "- Run job runner on high-side as daemon process, watching `private/job_runners/highside-1234/jobs` for new jobs\n",
-    "- Manually sync pending jobs and results (just in a notebook for now)\n",
-    "\n",
-    "Low side:\n",
+    "## High side Job Runner\n",
+    "- Run job runner on high-side as daemon process, watching the folder `private/job_runners/highside-1234/jobs` for new jobs\n",
+    "- Manually sync pending jobs and results (just in a notebook for now)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35",
+   "metadata": {},
+   "source": [
+    "## Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
     "- Low side: submit job to the correct runner (according to the dataset location: `private/job_runners/<dataset_location>/jobs`)\n",
     "- watch for results in the corresponding outputs dir\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
