--- a/packages/syft-runtimes/notebooks/high-low/high_low_local_stack.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local_stack.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "# High side settings\n",
     "highside_identifier = \"highside-1234\"\n",
-    "print(f\"{highside_identifier = }\")"
+    "highside_identifier"
    ]
   },
   {
@@ -149,9 +149,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "Create sync config for `jobs` and `done` folders"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,12 +185,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
     "# for debugging\n",
-    "\n",
     "from syft_runtimes.high_low.setup import _get_sync_commands\n",
     "\n",
     "commands = _get_sync_commands(rsync_config=sync_config, verbose=True)\n",
@@ -192,16 +199,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "syhl.sync(syftbox_client=highside_client)"
+    "syhl.sync(syftbox_client=highside_client, rsync_config=sync_config)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "# Create a high-side dataset"
@@ -210,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,9 +352,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27",
+   "metadata": {},
+   "source": [
+    "Sync the mock part of the dataset to the low side, also add the dataset names into the runtime's `config.yaml` file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,16 +376,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "source": [
-    "# Switch to low-side"
+    "# Switch to low-side\n",
+    "We want to check if the low-side has the synced dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,20 +442,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35",
+   "metadata": {},
+   "source": [
+    "**Sanity check**: the private data is not available on the low side (should raise FileNotFoundError)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sanity check: the private data is not available on the low side (should raise FileNotFoundError)\n",
     "# TODO improve error reporting for this case\n",
     "dataset.private_dir"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "37",
    "metadata": {},
    "source": [
     "Sync again (let's say after a job is done / new jobs arrive)"
@@ -448,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,28 +480,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "39",
    "metadata": {},
    "source": [
-    "## High side Job Runner\n",
-    "- Run job runner on high-side as daemon process, watching the folder `private/syft_runtimes/highside-1234/jobs` for new jobs\n",
-    "- Manually sync pending jobs and results (just in a notebook for now)"
+    "## Next Steps\n",
+    "\n",
+    "### High side Job Runner\n",
+    "- Manually sync pending jobs and results (just in a notebook for now)\n",
+    "- Run a daemon process on the high-side that's watching the folder `private/syft_runtimes/highside-1234/jobs` for new jobs that's coming on the low-side"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "40",
    "metadata": {},
    "source": [
-    "## Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
-    "- Low side: submit job to the correct runner (according to the dataset location: `private/job_runners/<dataset_location>/jobs`)\n",
-    "- watch for results in the corresponding outputs dir\n"
+    "### Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
+    "- Low side: submit job to the correct runner (according to the dataset location: `private/<email>/syft_runtimes/<high_low_runtime_name>/jobs`)\n",
+    "- Watch for results in the corresponding `done` dir\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": []
